--- a/APSAMLO/appsettings.json
+++ b/APSAMLO/appsettings.json
@@ -1,39 +1,39 @@
 {
   "AppSettings": {
     "Data": {
-      "apidprkpath": "url",
-      "apifreeze05path": "url",
-      "apihr02path": "url",
-      "apihr08path": "url",
-      "apiiranpath": "url",
-      "apiqaidapath": "url",
-      "apitalibanpath": "url"
+      "apidprkpath": "https://gateway.amlo.go.th/v1/dprk",
+      "apifreeze05path": "https://gateway.amlo.go.th/v1/freeze-05",
+      "apihr02path": "https://gateway.amlo.go.th/v1/hr-02",
+      "apihr08path": "https://gateway.amlo.go.th/v1/hr-08",
+      "apiiranpath": "https://gateway.amlo.go.th/v1/iran",
+      "apiqaidapath": "https://gateway.amlo.go.th/v1/al-qaida",
+      "apitalibanpath": "https://gateway.amlo.go.th/v1/taliban"
     },
     "Version": {
-      "apicheckdprkpath": "url",
-      "apicheckfreezepath": "url",
-      "apicheckhr02path": "url",
-      "apicheckhr08path": "url",
-      "apicheckiranpath": "url",
-      "apicheckqaidapath": "url",
-      "apichecktalibanpath": "url"
+      "apicheckdprkpath": "https://gateway.amlo.go.th/v1/version_check_dprk",
+      "apicheckfreezepath": "https://gateway.amlo.go.th/v1/version_check_freeze-05",
+      "apicheckhr02path": "https://gateway.amlo.go.th/v1/version_check_hr-02",
+      "apicheckhr08path": "https://gateway.amlo.go.th/v1/version_check_hr-08",
+      "apicheckiranpath": "https://gateway.amlo.go.th/v1/version_check_iran",
+      "apicheckqaidapath": "https://gateway.amlo.go.th/v1/version_check_al-qaida",
+      "apichecktalibanpath": "https://gateway.amlo.go.th/v1/version_check_taliban"
     },
     "Mail": {
-      "MailAPI": "http://1",
-      "Subject": "Subject",
-      "SYSTEM_FROM_EMAIL": "",
-      "SYSTEM_FROM_EMAIL_TO_CUSTOMER": "",
+      "MailAPI": "http://133.18.2.141:8081",
+      "Subject": "[KSS AUTO ALERT] : List of people at high risk from APS AMLO",
+      "SYSTEM_FROM_EMAIL": "ITApp@krungsrisecurities.com",
+      "SYSTEM_FROM_EMAIL_TO_CUSTOMER": "jittakorn.srisin@krungsrisecurities.com",
       "CC_EMAIL": ""
     },
-    "backuppath": "Backup",
-    "certificate": "cert.pfx",
-    "certificatepassword": "password",
-    "processpath": "Process",
-    "keyfile": "key.key",
-    "passphrase": "passphrase",
-    "username": "username",
-    "password": "password",
-    "x-api-key": "key",
-    "zipfilepath": "Output"
+    "backuppath": "C:\\Users\\10409079\\Desktop\\Test\\Backup",
+    "certificate": "C:\\Users\\10409079\\Desktop\\Test\\aps_2026.pfx",
+    "certificatepassword": "@mlop@ssWord",
+    "processpath": "C:\\Users\\10409079\\Desktop\\Test\\Process",
+    "keyfile": "C:\\Users\\10409079\\Desktop\\Test\\krungsrisecurities.key",
+    "passphrase": "@MLobUsY$TEm422p@$SW0rD",
+    "username": "krungsrisecurities",
+    "password": "7c46C9309d575c10",
+    "x-api-key": "7674A049-20DF-4C20-A42B-F8655B142E42",
+    "zipfilepath": "C:\\Users\\10409079\\Desktop\\Test\\Output"
   }
 }
